--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "moment": "^2.29.4",
-    "socket.io": "^4.6.0"
-  },
-  "devDependencies": {
+    "socket.io": "^4.6.0",
     "nodemon": "^2.0.20"
   }
 }
